# Bruin-2-Master

./: .gitignore  .travis.yml  60-bruin2.rules  README.md  TODOlist.html  bruin2.py  bruin2state.py  checklist.txt  gostopscreen.py  gui_test.sh  gui_test.xml  launch.xml  requirements.txt  run_bruin2.sh  run_bruin2_code.sh  setup.sh  setupAlex.md
.externalToolBuilders/: Catkin.launch
Drivers/Camera/: betaimage  betaimage.cpp
ENG406_Bruin2_GUI/ENG406_Bruin2_GUI/: DebugPopUp.qml  ENG406_Bruin2_GUI.pro  ENG406_Bruin2_GUI.pro.user.e6b11f2  LocPopUp.qml  Locations.qml  Makefile  Map.qml  PopupTrig.qml  debug.h  imgs.qrc  locMenu.qml  main.cpp  menu_items.qml  qml.qrc
ENG406_Bruin2_GUI/build-Debug/: ENG406_Bruin2_GUI  Makefile  qrc_qml.cpp
ENG406_Bruin2_GUI/build-ENG406_Bruin2_GUI-Desktop-Debug/: ENG406_Bruin2_GUI  Makefile  qrc_imgs.cpp
data/: waypoints.csv
src/: Untitled Document  output.txt
src/common/: GPS  GPS.msg  GUI_map.h  README.txt  csv.h  digipot.cpp  gpsread.txt  gpswaas.txt  (+2 more)
src/libraries/roboteq/roboteq_driver/: CMakeLists.txt  package.xml
src/libraries/roboteq/roboteq_driver/mbs/: script.hex  script.mbs
src/libraries/roboteq/roboteq_driver/src/: channel.cpp  controller.cpp  driver.cpp
src/libraries/serial_utils/: CMakeCache.txt  CMakeLists.txt  manifest.xml  package.xml
src/libraries/serial_utils/catkin_generated/: generate_cached_setup.py  setup_cached.sh
src/libraries/serial_utils/examples/: serial_listener_example.cc
src/libraries/serial_utils/src/: serial_listener.cc
src/libraries/serial_utils/tests/: serial_listener_tests.cc
(+160 files in other folders)
